--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+# Ignore Dataset files
+*.csv
+
 # Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks,python
 
